[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/feathers.png" type="Texture" id=1]
[ext_resource path="res://Scripts/heath.gd" type="Script" id=2]
[ext_resource path="res://UI/empty_feathers.png" type="Texture" id=3]

[node name="HBoxContainer" type="HBoxContainer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = -100.0
margin_right = 87.0
margin_bottom = -13.0
rect_scale = Vector2( 3, 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="feather" type="TextureRect" parent="."]
margin_right = 22.0
margin_bottom = 87.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="feather_empty" type="TextureRect" parent="."]
margin_left = 26.0
margin_right = 48.0
margin_bottom = 87.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="feather2" type="TextureRect" parent="."]
margin_left = 52.0
margin_right = 74.0
margin_bottom = 87.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="feather_empty2" type="TextureRect" parent="."]
margin_left = 78.0
margin_right = 100.0
margin_bottom = 87.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="feather3" type="TextureRect" parent="."]
margin_left = 104.0
margin_right = 126.0
margin_bottom = 87.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="feather_empty3" type="TextureRect" parent="."]
margin_left = 130.0
margin_right = 152.0
margin_bottom = 87.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
